Added new name and color customizability for dashboard
